--- a/article/sg0/doc/0167.md
+++ b/article/sg0/doc/0167.md
@@ -6,50 +6,35 @@
 
 ---
 
-“！？”  
 “嘎哈……”  
-“和再次突然响起的枪声同时，篝的身体，从我的眼前倒下了。”  
-“看向枪响的方向，是一个和篝一样黑色骑手服的女人——因为没有戴头盔，毫无疑问就是桐生萌郁——举着枪。”  
-“病态的苍白的脸上，流着眼泪。”  
-“为，为什么……为什么，你会……？”  
-“为什么啊！桐生萌郁！”  
-“FB……呐，FB……？我，没有被这种女人骗到……这是，假的手机我是知道的……所以，拜托了。不要抛弃我，FB……FB……”  
-“从萌郁的手中，电话掉落下来。”  
-“随着她的枪击，那个手机变得粉碎。”  
+篝发出一声痛呼，在我的眼前倒下了。  
+看向枪响的方向，是一个和篝一样穿着黑色骑手服的女人——因为没有戴头盔，可以肯定就是桐生萌郁——她举着枪，脸色病态而苍白，流着眼泪。  
+“为、为什么……为什么，你要这么做……？为什么啊！桐生萌郁！！”  
+“FB……呐，FB……？我，没有被这种女人骗到……  
+ 我知道的，这是假的手机……  
+ 所以，求求你，不要抛弃我，FB……FB……”  
+手机从桐生萌郁手中滑落。她再次开枪，将那部手机打得粉碎。  
 
 ![](../static/image/0162-2.png)
 
-“我把篝抱了起来。”  
-“她的胸口，眼看着一点点被血浸透。”  
+我蹲下抱起篝，眼看着她的胸前，一点点被血浸透。  
 “咳……”  
 “喂，振作点！”  
-“啊啊……太好了……”  
-“就算听神明大人的话……也会有错的时候……”  
-“自作……自受……这是……”  
-“因为践踏她的心灵……想要利用她……的原因……”  
-“对不起……本不想成为……这样的孩子……的。”  
-“呐，妈妈……在哪？你在哪里……？”  
-“篝的声音，变得微弱了。”  
-“桐生萌郁也拿着枪，跌坐在在不远处。”  
-“眼神失去了焦点，只是不停的嘟嘟囔囔的，完全不能正常思考的状态。”  
-“必须送去医院，两个人的状态都很危险。”  
-“但是——”  
+“啊……太好了……原来神明大人的话……也会有错的时候……  
+ 这是我……自作……自受……因为践踏了她的心灵……想要利用她……  
+ 对不起……我本来不想……变成这样的……坏孩子的。  
+ 呐，妈妈……你在哪？你在哪里啊……？”  
+篝的声音，逐渐变得微弱。桐生萌郁拿着枪，瘫坐在在不远处。双眼失去了焦点，只是不停喃喃自语着，完全不能正常思考。两个人的状态都很危险，得立刻送她们去医院。但是——  
 
 ![](../static/image/0046-6.png)
 
-“数十个身穿迷彩服的男人们越过楼顶的栏杆，一起出现了。”  
-“诶？”  
-“果然就算是桶子和真帆，这么短的时间也是没办法吗……？”  
-“还是说，最终，这个世界线的战争，就是从这个地方开始的——这样的收束无法避免，是这样吗？”  
-“不，但是……”  
-“呼……并不是没用的……”  
-“至少，二人为我争取到了时间。”  
-“拜此所赐，袭击的时刻往后延了……铃羽和真由理也能够平安的启程了。”  
-“对——现在，这个瞬间，我们的『目的』毫无疑问是完成了。”  
-“虽然还不确定，但是通往命运石之门的道路，毫无疑问就在我们的前方。”  
-“目标 1，丢失。”  
-“目标 2，目标 3 也丢失了！怎么回事！”  
-“领头的男人，用无线电报告着情况。”  
+数十个穿着迷彩服的男人越过了楼顶的栏杆。  
+“啊！？”  
+果然，即使是桶子和真帆，这么短的时间也是没办法吗……？还是说，最终，这条世界线会从这里开始爆发战争——这样的收束是无法避免的吗？不，但是……  
+“呵……并不是没用的……”  
+至少，他们俩为我争取到了时间。拜此所赐，袭击的时刻延后了——铃羽和真由理已经顺利启程了。没错——现在，这个瞬间，我们的“目标”毫无疑问地达成了。虽然还不确定，但是通往命运石之门的道路，毫无疑问就在我们前方。  
+“目标 1，丢失……目标 2，目标 3 也丢失了！怎么回事？”  
+迷彩服队长通过无线电向谁报告着目前的状况。  
 
 ![](../static/image/0046-4.png)
 
@@ -57,41 +42,23 @@
 “游击队攻击警报！游击队攻击警报！
  本地区可能遭遇游击队攻击！  
  请立即进入室内避难，并打开电视或收音机。”  
-“战争，渐渐开始了。”  
-“果然，就算时间跳跃，这个也无法改变。”  
+战争，即将开始了。果然，就算时间跳跃，这个也无法改变。  
 
-“这不是 *Rintaro* 嘛。”  
-“雷斯吉宁从迷彩服们的身后走出来。”  
-“是的……这家伙是，和迷彩服们一样，是 STRATFO 的暗处的成员。”  
-“为什么，在这里……？”  
-“篝，死了吗？”  
+“这不是 *Rintaro* 嘛——”  
+雷斯吉宁从迷彩服队员们的身后走了出来，是啊……这家伙，和穿迷彩服的男人们，都是 STRATFO 的成员。  
+“你为什么在这里……？*Kagari* 死了吗？”  
 “……”  
-“说话啊，*Rintaro*。”  
-“时间机器在哪里？”  
-“我让篝躺在地上，慢慢的站起身来。”  
-“腿上的伤口的血止不住地往外流。”  
-“疼痛也加剧了。”  
-“就算如此，我也稳稳的两只脚踩在地面上。”  
-“在用枪指着我的迷彩服们面前。”  
-“在武装直升机的火箭弹面前。”  
-“在『教授』的面前。”  
-“在即将开始的战争面前——  
+“告诉我，*Rintaro*，时间机器在哪里？”  
+我让篝躺在地上，慢慢站起身来。血止不住地从腿上的伤口流出来，疼痛也加剧了。即便如此，我也稳稳地双脚踩在地面上，面对用枪指着我的穿迷彩服的男人们，面对挂载着导弹的武装直升机，面对『教授』，面对即将开始的战争面前——我用那个声音，放肆地大笑。  
 
-“我用那个声音，放声大笑。”  
-“…………哈……哈哈……哈哈哈……啊哈哈哈哈哈哈哈！”  
-“给我听好了，你们这些蠢货们！”  
-“你们这些家伙想要得到的时间机器，已经不在这里了！”  
-“在这个时代，已经不存在了！”  
-“真可惜呐！给我好好的后悔吧！”  
-“然后感到恐惧吧！”  
-“我凤凰院凶真，对你们这些家伙也好，对命运也是，都不会输！”  
-“我，一定会，把命运石之门找出来！”  
-“正是。”  
-“在前面等待我的是，为了到达命运石之门的，漫长的碑文。”  
-“——所谓的疯狂，是无数次重复同样的事情，却期待着不同结果。”  
-“曾经，爱因斯坦对于人类的愚蠢叹息着这样说过。”  
-“但是，我现在，很乐意的投身到这种疯狂和愚蠢之中。”  
-“带着所有的执念，不需要“神的至理”，只是追求着一个不同的结果。”  
+“哼……哼哼……哼哼哼哼……呼——哈哈哈哈哈哈！！  
+ 给我听好了，你们这些蠢货！  
+ 你们想要得到的时间机器，已经不在这里了！  
+ 已经不存在于这个时代了！  
+ 真可惜呐！懊悔吧！然后恐惧吧！  
+ 我凤凰院凶真，对你们这些家伙也好，对命运也好，绝对不会输！  
+ 我，一定会，找到命运石之门！”  
+没错，前面等待我的，是为了到达命运石之门，将要刻下的漫长的碑文。所谓疯狂，即无数次重复同样的事情，却期待着不同结果——曾经，爱因斯坦曾如此叹息人类的愚蠢。然而，现在的我，很乐意放任自己，投身到这种疯狂和愚蠢之中。带着所有的执念，不需要“神的至理”，只是追求着一个不同的结果。  
 “这就是！本大爷的！选择！！”  
 
 ![](../static/image/0167-1.png)
