--- a/article/sg0/doc/0168.md
+++ b/article/sg0/doc/0168.md
@@ -3,7 +3,7 @@
 > [ 2036/08/13 ]  
 
 ## 情报整理 | 各方势力
-### LABMem
+### LAB
 - 冈部伦太郎
   - 已觉醒——世界修正拳（被动）+ 真由理的真心
   - 2025 年去世，为了保护真由理
@@ -11,15 +11,14 @@
   - 正式派出 LABMem No.002——椎名真由理去完成「*Operation·Arclight*（织女星）」
   - 以凤凰院凶真的身份正式对『教授』等敌对势力发出胜利宣言
   - 未来将成立并带领『瓦尔基里』，完成时间机器的开发
-
 - 比屋定真帆
+  - 保管红莉栖的笔记本电脑和硬盘，请桶子破解密码
+  - 与众人分析得出，真正的战争起因是《中钵论文》背后的红莉栖原版论文
   - 从冈伦处得知时间机器情报
   - 喜欢冈伦
-  - 与众人分析得出，真正的战争起因是《中钵论文》背后的红莉栖原版论文
   - 与桶子偷偷开发『时间跳跃机』，被发现后与冈伦大吵一架，唤醒他心底的不甘
   - 在凶真的指导下，与桶子合力开发出了『时间跳跃机』
   - 未来将加入『瓦尔基里』
-
 - 椎名真由理
   - 七夕当天，意外得知了 α 世界线与红莉栖的真相
   - 想要找回自己的“牵牛星”，即使明知自己不会是他的“织女星”
