--- a/article/sg0/doc/0018.md
+++ b/article/sg0/doc/0018.md
@@ -50,9 +50,9 @@
   <summary>涉及真结局的部分</summary>
 
   前提：已完成《盟誓的文艺复兴（红莉栖结局）》  
-  与吹雪和枫谈话，被问到喜欢的人，浮现红莉栖的幻影时，白袍凶真的幻影同时浮现，手机收到这封改变世界的 D-RINE（分成三条送达）。  
+  与吹雪和枫谈话，被问到喜欢的人，浮现红莉栖的幻影时，白袍凶真的幻影同时浮现，手机收到这封改变世界的 D-RINE。  
 
-  ![](../static/image/0138-3.png)
+  ![](../static/image/0018-2.png)
 </details>
 
 
