--- a/article/sg0/doc/0039.md
+++ b/article/sg0/doc/0039.md
@@ -152,7 +152,7 @@
 我应该一再叮嘱过吹雪，要她对这件事保密的。难道是没忍住吗？这下情况麻烦了，搞不好，吹雪会被怀疑是否有精神方面的问题……  
 “呃……中濑小姐她，那个……想象力特别丰富，特别喜欢 SF 和动画什么的。  
  ‘感知其他平行世界的力量’什么的，我想大概是受兴趣的影响才会那么说的吧。  
- 实际上，我也有经常说那些事情的时期啊，哈哈哈哈……”  
+ 实际上，我也有经常说那些事情的时期啊，哈哈……”  
 我拼命想蒙混过去，但是雷斯吉宁教授却一副认真的表情在思考着。  
 “但是啊……我参与治疗项目之后，也发现了让我惊讶的事实……  
  作为这个病症的特征，的确出现了很多患者拥有同样梦境的现象。  
