--- a/article/sg0/doc/0045.md
+++ b/article/sg0/doc/0045.md
@@ -88,7 +88,7 @@
  这样的‘情报’。”  
 “你究竟……想说什么……？”  
 “这些为人类大脑这种脆弱群体准备的‘情报’，不交给能够好好控制的人来管理是不行的。  
- 这就是 *Strategic Focus* 的最终目的。  
+ 这就是 *Strategic·Focus* 的最终目的。  
  我对此深有同感，作为脑科学家，以特工的身份跟他们合作。  
  理解了吗？”  
 “……我理解不了！  
