--- a/article/sg0/doc/0049.md
+++ b/article/sg0/doc/0049.md
@@ -7,29 +7,27 @@
 ---
 
 ## 情报整理 | 各方势力
-### LABMem
+### LAB
 - 冈部伦太郎
   - 未觉醒，彻底放弃
   - 2025 年去世
 - 椎名真由理
   - 2011 年秋叶原大战后失踪
+
+### 中立
 - 桐生萌郁
   - 交集不深
   - 以报社编辑的身份采访过真帆
+
+### 敌对
 - 比屋定真帆
-  - 从冈伦出套出时间机器情报
+  - 保管红莉栖的笔记本电脑和硬盘，请桶子破解密码
+  - 从冈伦处套出时间机器情报
   - 被『教授』洗脑，泄露情报
   - 2011 年秋叶原大战后主动消失
-- 椎名篝
-  - 被『教授』洗脑，后为了妈妈摆脱控制
-  - 2011 年秋叶原大战时救出冈伦而牺牲
-
-### 同盟
 - 穿黑色骑手服的女人
   - 真实身份为篝，幼时被『教授』洗脑
   - 因为真由理觉醒摆脱控制，闯入 STRATFO 基地救出冈伦后牺牲
-
-### 敌对
 - 阿莱克西斯·雷斯吉宁 *Alexis·Leskinen*
   - 【美】STRATFO，代号『教授』
   - 擅长洗脑技术，控制了篝和真帆
@@ -48,7 +46,7 @@
 - 『Amadeus』
   - 会被『教授』监听
   - 已被删除
-- FG V204 2nd EDITION ver2.31
+- 『FG-C204 2nd EDITION ver2.31』
   - 2011 秋叶原大战中疑似被破坏
 
 ## 情报整理 | 重要事件
@@ -73,8 +71,8 @@
   - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-- ■■■■■■■■■■
-- ■■■■■■■■■■
+  - ■■■■■■■■■■
+  - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
