--- a/article/sg0/doc/0093.md
+++ b/article/sg0/doc/0093.md
@@ -7,7 +7,7 @@
 ---
 
 ## 情报整理 | 各方势力
-### LABMem
+### LAB
 - 冈部伦太郎
   - 未觉醒
   - 2025 年去世
@@ -75,8 +75,8 @@
   - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-- ■■■■■■■■■■
-- ■■■■■■■■■■
+  - ■■■■■■■■■■
+  - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
