--- a/article/sg0/doc/0097.md
+++ b/article/sg0/doc/0097.md
@@ -38,7 +38,7 @@
 “就、就是，这种……就是，和女性一起洗澡什么的，这种事……”  
 “你没有和姐姐一起洗过澡吗？”  
 “洗过是洗过……不过，那是小时候的事情了。”  
-“噗……噗噗——哈哈哈哈哈哈哈！”  
+“噗……噗噗——哈哈哈哈哈哈！”  
 “篝……篝？”  
 “抱歉抱歉，开玩笑、开玩笑的啦。琉华君很可爱，忍不住就捉弄了一下。”  
 “怎么这样……”  
