--- a/article/sg0/doc/0129.md
+++ b/article/sg0/doc/0129.md
@@ -78,10 +78,10 @@
 多亏这一拳，我清醒过来了。  
 “哼哼——”  
 我只要去做我能做到的事情就行了。  
-“哼哼哼哼哼——”  
+“哼哼哼哼——”  
 “冈……伦……？”  
 “……？”  
-“**哼——哈哈哈哈！！！**”  
+“**呼——哈哈哈哈哈哈！！！**”  
 “难、难道……是凶真？”  
 “冈伦……”  
 “你说错了哦，真由理……我是，凤凰院……凶真……！”  
@@ -109,7 +109,7 @@
 “对，就是这个！这才是我神圣的白银铠甲！  
  于此时此刻，凤凰院凶真复活了！  
  我从漫长的沉睡中苏醒过来了！  
- 呼哈哈哈哈哈哈哈！！！！”  
+ 呼——哈哈哈哈哈哈！！！！”  
 
 ![](../static/image/0129-1.png)
 
@@ -129,7 +129,7 @@
 “我现在授予你 **LABMem No.009** 的荣誉！  
  今后，允许你作为我凤凰院凶真的部下，参加我们的作战计划！”  
 “为什么我一定要成为你的部下啊，还有那个 LABMem Number 是什么鬼！？”  
-“顾名思义，就是被选为这个 LAB 的正式成员的证明。感到光荣吧！”  
+“顾名思义，就是被选为这个 LAB 的正式成员的证明，感到光荣吧！”  
 “说什么光荣……”  
 “接下来，椎名篝！”  
 “呼诶！？”  
@@ -137,7 +137,7 @@
 “是、是！”  
 “等等，凶真！我们俩不能成为 LABMem 喵？”  
 “嗯……？”  
-菲莉丝和琉华子正用不满的眼神看着我。说起来，认定他们俩为 LABMem 是在 α 世界线，而不是在这条世界线。  
+菲莉丝和琉华子正用不满的眼神看着我。说起来，认定他们俩为 LABMem 是在 α 世界线，这条世界线还没有。  
 “我没说过吗？你们当然已经是 LABMem 了！  
  琉华子是 **006**，菲莉丝是 **007**，然后铃羽是 **008**！明白了吗？”  
 “是、是！”  
@@ -145,7 +145,7 @@
 “……虽然不太明白，不过了解了。”  
 “话说冈伦，那不是很奇怪吗？这样的话，004 和 005 不就空缺了吗？”  
 “这两个号码已经有预约了。”  
-红莉栖和萌郁——将萌郁留作 LABMem 的一员，说实话我还有点抵触。但总有一天，为了抵达连她也能被认同的世界线，我要敢于直面过去。我是这样决定的。  
+红莉栖和萌郁——将萌郁留作 LABMem 的一员，说实话我还有点抵触。但总有一天，为了抵达连她也能被认同的世界线，我要敢于直面过去，我是这样决定的。  
 
 “那么趁现在大家都集齐了，我再重新宣言一遍！  
  以今天，2011 年 1 月 31 日为起点，启动新的作战！  
