--- a/article/sg0/doc/0135.md
+++ b/article/sg0/doc/0135.md
@@ -104,7 +104,7 @@
 “嘛，你慢慢考虑……”  
 “哼哼……哼哼哼哼——”  
 “……？”  
-“哼——哈哈哈哈！竟然能看中我的才能，看来你有 *Highest·Eye* 啊！”  
+“呼——哈哈哈哈哈哈！竟然能看中我的才能，看来你有 *Highest·Eye* 啊！”  
 “*Highest Eye*……？”  
 “眼光好的意思！没想到你身为一介美利坚人，竟然连这个都不明白！  
  但是算了，刚刚说你是科学家中的败类，我就收回这句话吧。  
