--- a/article/sg0/doc/0137.md
+++ b/article/sg0/doc/0137.md
@@ -90,7 +90,7 @@ OSHMKUFAHSA——徽章上，刻着所有成员名字的首字母。当然，红
 无数的未来和无数的过去，都一定会在收束的地方相遇。所以——  
 “啊，是我……  
  什么？你问什么时候来救你？别急，现在还没到那个时候。  
- 哼哼哼……你以为我是谁？听好了，狂气的疯狂科学家，凤凰院凶真决不会食言。  
+ 哼哼……你以为我是谁？听好了，狂气的疯狂科学家，凤凰院凶真决不会食言。  
  所以，你暂且等着就好。  
  总有一天，我会解开束缚着你的时间的诅咒，把你拯救出来。  
  啊……绝对……”  
