--- a/article/sg0/doc/0139.md
+++ b/article/sg0/doc/0139.md
@@ -6,7 +6,7 @@
 
 ---
 ## 情报整理 | 各方势力
-### LABMem
+### LAB
 - 冈部伦太郎
   - 已觉醒——3000 次时间跳跃 + 世界修正拳（主动）
   - 2025 年去世（？）
@@ -75,8 +75,8 @@
   - 删除篝脑中的记忆备份
 - 凤凰院凶真觉醒
   - 3000 次时间跳跃 + 世界修正拳（主动）
-- D-RINE
-- ■■■■■■■■■■
+  - D-RINE（世界可以被欺骗）
+  - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
