--- a/article/sg0/doc/0146.md
+++ b/article/sg0/doc/0146.md
@@ -56,7 +56,7 @@
 ![](../static/image/0146-1.png)
 
 编辑好了……发送。接下来会怎么样呢？我故意用了挑衅性质的语气，并且多多少少混进了一些错误的内容。虽然由我自己来说可能不合适，但是我觉得，我比雷斯吉宁教授和真帆他们更了解红莉栖。  
-“哼哼哼……应该会轻易上钩的，如果是‘红莉栖’的话……”  
+“哼哼……应该会轻易上钩的，如果是‘红莉栖’的话……”  
 
 “冈\~伦。”  
 “啊……！”  
