--- a/article/sg0/doc/0156.md
+++ b/article/sg0/doc/0156.md
@@ -8,8 +8,9 @@
 
 “冈部先生。”  
 真帆追了过来，因为势头太猛，差点撞上来。  
-“你觉得命运石之门，真的存在吗？  
- 真由理小姐没有死去……并且，红莉栖也没有牺牲，这样狭缝中的世界线，你觉得存在吗？”  
+“你觉得，命运石之门，真的存在吗？  
+ 真由理小姐没有死去……并且，红莉栖也没有牺牲，  
+ 这种夹缝中的世界线，真的存在吗？”  
 “如果你想知道，曾经以此为目标的我究竟经历了什么，就去问铃羽吧。  
  说到底，命运是无法违抗的，那只是毫无价值的妄想。”  
 “这样断言，真的可以吗？根本还没有证明它不存在吧？”  
@@ -18,7 +19,7 @@
 “什、么……？！”  
 这一句话，差点让我失控，想要动手抓住真帆的肩膀。不过我总算努力控制住了自己。  
 “我刚刚说了吧？我已经挑战了几次、几十次、几百次——”  
-“我也说了吧？那根本不是什么‘神’的至理。”  
+“我也说了吧？那根本不是什么‘神的至理’。”  
  世界线也好，时间机器也好，命运石之门什么的也好——  
  都不过是构成世界的公式而已。  
  失败了几次、几十次、几百次？  
