--- a/article/sg0/doc/0122.md
+++ b/article/sg0/doc/0122.md
@@ -7,7 +7,7 @@
 ---
 
 ## 情报整理 | 各方势力
-### LABMem
+### LAB
 - 冈部伦太郎
   - 未觉醒
   - 2025 年去世
@@ -82,8 +82,8 @@
   - ■■ 篝脑中的记忆备份
 - ■■■■■■■■■■■■■
   - ■■■■■■■■■■
-- ■■■■■■■■■■
-- ■■■■■■■■■■
+  - ■■■■■■■■■■
+  - ■■■■■■■■■■
 - ■■■■■■■■■■■■■
 
 ---
